style(main): fix container overflow styles

--- a/engine-ui/packages/console-ui/src/styles/main.scss
+++ b/engine-ui/packages/console-ui/src/styles/main.scss
@@ -23,10 +23,10 @@ table{
     font-size:12px;
 }
 .overflow-x-hidden{
-    overflow-x: hidden;
+    overflow: hidden;
 }
 .overflow-hidden {
-    overflow: hidden;
+    overflow: auto;
 }
 .main .container {
     height: 100%;
